unpackaged/main/default/objects/Opportunity/fields/Account_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer__c</fullName>
    <description>Field that will be updated by workflow to hold the customer # related to this opportunity</description>
    <label>Account Customer #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>