unpackaged/main/default/objects/Opportunity/fields/Added_to_SalesPad__c.field-meta.xml
<CustomField>
    <fullName>Added_to_SalesPad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked by the SmartConnect job only after successfully submitted to SalesPad</description>
    <label>Added to SalesPad</label>
    <type>Checkbox</type>
</CustomField>