unpackaged/main/default/objects/Opportunity/fields/Anticipated_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_of_Days__c</fullName>
    <inlineHelpText>Anticipated number of working days, do not include Travel</inlineHelpText>
    <label>Anticipated # of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>