unpackaged/main/default/objects/Opportunity/fields/GP_Margin__c.field-meta.xml
<CustomField>
    <fullName>GP_Margin__c</fullName>
    <formula>IF ( Product_Cost__c &gt; 0 &amp;&amp; Product_Total__c &gt; 0,  Product_GP__c / Product_Total__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Margin % based on Gross Profit of ATS Products</inlineHelpText>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>