unpackaged/main/default/objects/Opportunity/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <defaultValue>IF( $RecordType.Name = &#39;Sports Opp - Maintenance&#39;, &#39;Maintenance&#39;,
IF(  $RecordType.Name = &#39;Sports Opp - Construction&#39;, &#39;Construction&#39;, 
 null
))</defaultValue>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>