unpackaged/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Lost Bid</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Expired Quote</fullName>
            </value>
            <value>
                <fullName>Scheduling Conflict</fullName>
            </value>
            <value>
                <fullName>Choose Other Opportunity</fullName>
                <label>Choose Other ATS Opportunity</label>
            </value>
            <value>
                <fullName>Covid Delayed/Potential Future</fullName>
                <label>Covid Delayed / Potential Future</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>