unpackaged/main/default/objects/Opportunity/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Updated by workflow and the same as the ID, for use in SmartConnect to update Opportunity with the SOP number created in GP/SalesPad</description>
    <externalId>true</externalId>
    <label>Opportunity ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>