unpackaged/main/default/objects/Opportunity/fields/Product_Total__c.field-meta.xml
<CustomField>
    <fullName>Product_Total__c</fullName>
    <inlineHelpText>ATS Product Total</inlineHelpText>
    <label>Product Total</label>
    <summarizedField>Opportunity_Product__c.Extended_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity_Product__c.ATS_Product__c</field>
        <operation>notEqual</operation>
        <value>a0A4100000GiqekEAB</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity_Product__c.ATS_Product__c</field>
        <operation>notEqual</operation>
        <value>a0A41000007Tu0hEAC</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>