unpackaged/main/default/objects/Opportunity/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select a Contact from this Account where the Work Order/Service will take place</description>
    <label>Service Address</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Service Address)</relationshipLabel>
    <relationshipName>Service_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>