unpackaged/main/default/objects/Opportunity/fields/Sports_Opp_Manger__c.field-meta.xml
<CustomField>
    <fullName>Sports_Opp_Manger__c</fullName>
    <formula>IF(Sports_Opp__c = True &amp;&amp; ( 
   $User.LastName = &quot;Hephner&quot; || 
   $User.LastName = &quot;Pruden&quot;  ||
   $User.LastName = &quot;O&#39;Grady&quot;  ||
   $User.LastName = &quot;Mehringer&quot; ||
   $User.LastName = &quot;Hancock&quot; ||
    $User.LastName = &quot;Sage&quot;)
, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sports Opp Manger?</label>
    <type>Checkbox</type>
</CustomField>