unpackaged/main/default/objects/Opportunity/fields/Surveyor_Name__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_Name__c</fullName>
    <inlineHelpText>The name of the surveyor completing the Field Evaluation (can leave blank if done by the customer&#39;s assigned Rep)</inlineHelpText>
    <label>Surveyor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>