unpackaged/main/default/objects/Opportunity/recordTypes/Equipment_Demo.recordType-meta.xml
<RecordType>
    <fullName>Equipment_Demo</fullName>
    <active>true</active>
    <businessProcess>Equipment Demo</businessProcess>
    <description>Track Equipment Demo Opportunities (inc Steel Green)</description>
    <label>Equipment Demo</label>
</RecordType>