unpackaged/main/default/objects/Opportunity/recordTypes/SGM_Machine.recordType-meta.xml
<RecordType>
    <fullName>SGM_Machine</fullName>
    <active>true</active>
    <businessProcess>SGM Machine</businessProcess>
    <description>Steel Green Manufacturing - Machine Sale (not related to a Demo)</description>
    <label>SGM Machine</label>
</RecordType>