unpackaged/main/default/objects/Opportunity/recordTypes/Soft_Goods.recordType-meta.xml
<RecordType>
    <fullName>Soft_Goods</fullName>
    <active>true</active>
    <businessProcess>Customer Opportunity</businessProcess>
    <label>Soft Goods</label>
</RecordType>