unpackaged/main/default/objects/Opportunity/recordTypes/Sports_Opp_Construction.recordType-meta.xml
<RecordType>
    <fullName>Sports_Opp_Construction</fullName>
    <active>true</active>
    <businessProcess>Sports Turf Construction</businessProcess>
    <description>Sports Construction Job</description>
    <label>Sports Opp - Construction</label>
</RecordType>