unpackaged/main/default/objects/Opportunity/recordTypes/Sports_Opp_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Sports_Opp_Maintenance</fullName>
    <active>true</active>
    <businessProcess>Sports Turf Maintenance</businessProcess>
    <description>Sports Maintenance Job</description>
    <label>Sports Opp - Maintenance</label>
</RecordType>