unpackaged/main/default/objects/Opportunity/recordTypes/Sports_Opp_New.recordType-meta.xml
<RecordType>
    <fullName>Sports_Opp_New</fullName>
    <active>true</active>
    <businessProcess>Sports Turf - New</businessProcess>
    <description>A New Sales Opportunity for a Sports Turf Service Project (Construction or Maintenance)</description>
    <label>Sports Opp - New</label>
</RecordType>