unpackaged/main/default/objects/Opportunity/validationRules/Closed_Lost_Reason_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Reason_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( StageName , &#39;Closed Lost&#39;),
ISBLANK(TEXT( Loss_Reason__c ))
)</errorConditionFormula>
    <errorMessage>If closed lost a reason is required</errorMessage>
</ValidationRule>