unpackaged/main/default/objects/Opportunity/validationRules/Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won</fullName>
    <active>false</active>
    <description>Limit who can mark an opportunity closed won</description>
    <errorConditionFormula>AND( 
  NOT(ISCHANGED(StageName)),
  ISPICKVAL(StageName, &#39;Closed Won&#39;),
  NOT(ISCHANGED(Work_Order_Assigned__c)),
  NOT(ISCHANGED(W_O_Scheduled__c)), 
  NOT(ISCHANGED( W_O_Location_Shop__c)), 
  $User.LastName != &#39;Hephner&#39;,
  $User.LastName != &#39;Pruden&#39;,
  $User.LastName != &quot;O&#39;Grady&quot;,
  $User.LastName != &#39;Hancock&#39;,
  $User.LastName != &#39;Kavanaugh&#39;,
  $UserRole.Name != &#39;FSL User&#39;,
  $User.LastName != &#39;Armstrong&#39;,
  $User.LastName != &#39;Schuurmans&#39;,
  $User.LastName != &#39;Ferguson&#39;,
  $User.LastName != &#39;Bullock&#39;,
  $User.LastName != &#39;Sage&#39;,
  $User.Id != &#39;0052M0000095121&#39; 
 )</errorConditionFormula>
    <errorMessage>Hello, you should not make changes to the opportunity after closed won. Thank you</errorMessage>
</ValidationRule>