unpackaged/main/default/objects/Opportunity/validationRules/Closed_Won_to_be_Ready_for_Salespad.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_to_be_Ready_for_Salespad</fullName>
    <active>false</active>
    <errorConditionFormula>Ready_for_Salespad__c = True &amp;&amp;  TEXT(StageName) != &#39;Closed Won&#39;</errorConditionFormula>
    <errorDisplayField>Ready_for_Salespad__c</errorDisplayField>
    <errorMessage>Only &quot;Closed - Won&quot; Opportunities can be Ready for Salespad</errorMessage>
</ValidationRule>