unpackaged/main/default/objects/Opportunity/validationRules/Closed_Won_without_approved_quote.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Won_without_approved_quote</fullName>
    <active>true</active>
    <description>Prevent users from close winning sports opp without approved quote.</description>
    <errorConditionFormula>And(
ISCHANGED(StageName),
ISPICKVAL(StageName, &#39;Closed Won&#39;),
 Quote_Approved__c == false,
OR(
RecordType.Name == &#39;Sports Turf&#39;,
RecordType.Name == &#39;Sports Opp - Construction&#39;,
RecordType.Name == &#39;Sports Opp - Maintenance&#39;,
RecordType.Name == &#39;Sports Opp - New&#39;
)


)</errorConditionFormula>
    <errorMessage>Quote must be approved before close winning opp</errorMessage>
</ValidationRule>