unpackaged/main/default/objects/Opportunity/validationRules/if_PONumber_then_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>if_PONumber_then_Contact_Required</fullName>
    <active>true</active>
    <description>If PO # is filled in then the Contact is required</description>
    <errorConditionFormula>AND(
				NOT(ISBLANK(Customer_PO__c)),
    ISBLANK( Contact__c )
)</errorConditionFormula>
    <errorMessage>Please enter in a Contact.</errorMessage>
</ValidationRule>