unpackaged/main/default/objects/Opportunity/validationRules/No_Lead_Account_Close_Win.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Lead_Account_Close_Win</fullName>
    <active>true</active>
    <errorConditionFormula>And(
ISCHANGED(StageName),
ISPICKVAL(StageName, &#39;Closed Won&#39;),
ISBLANK(Account.Customer__c ),
OR(
RecordType.Name == &#39;Sports Turf&#39;,
RecordType.Name == &#39;Sports Opp - Construction&#39;,
RecordType.Name == &#39;Sports Opp - Maintenance&#39;,
RecordType.Name == &#39;Sports Opp - New&#39;
)


)</errorConditionFormula>
    <errorMessage>Must have a S account to close win.</errorMessage>
</ValidationRule>