unpackaged/main/default/objects/Opportunity/validationRules/PO_number_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_number_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>IF(PO_Override__c,
				false,
				AND(
								OR(
												RecordType.DeveloperName = &#39;Sports_Opp_Construction&#39;,
		          RecordType.DeveloperName = &#39;Sports_Opp_Maintenance&#39;
								),
				 ISPICKVAL(StageName, &#39;Closed Won&#39;),
				 ISBLANK(Customer_PO__c)
    )
	)</errorConditionFormula>
    <errorMessage>You must have a PO number before you can close win this Opportunity. If you do not have a PO, please contact your Administrators.</errorMessage>
</ValidationRule>