unpackaged/main/default/objects/Opportunity/validationRules/Service_address_must_be_set_to_review.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_address_must_be_set_to_review</fullName>
    <active>true</active>
    <description>Require a service address before submitting for a review</description>
    <errorConditionFormula>AND(ISPICKVAL( Quote_Stage__c , &#39;Needs Review&#39;), ISBLANK( Service_Address__c ) )</errorConditionFormula>
    <errorMessage>Service Address is required before requesting review.</errorMessage>
</ValidationRule>