unpackaged/main/default/objects/Opportunity/listViews/Admin_of_Sport_Turf_Opportunities.listView-meta.xml
<ListView>
    <fullName>Admin_of_Sport_Turf_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Product_Description__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Sales_Rep__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sports_Opp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>81219-S-OAK CREEK-FRANKLIN JOINT SCHOOL DIST.</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Sports_Opp_Construction,Opportunity.Sports_Opp_Maintenance</value>
    </filters>
    <filters>
        <field>Quote_Stage__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Admin - of Sport Turf Opportunities</label>
    <sharedTo>
        <group>IT_Department</group>
    </sharedTo>
</ListView>