unpackaged/main/default/objects/Opportunity/listViews/Closed_Won_CPQ_Opportunities_Today.listView-meta.xml
<ListView>
    <fullName>Closed_Won_CPQ_Opportunities_Today</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Total_Amount__c</columns>
    <columns>Product_GP__c</columns>
    <columns>GP_Margin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Customer_Opportunity</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Closed - Won CPQ Opportunities Today</label>
    <sharedTo>
        <group>IT_Department</group>
        <group>Sales_Managers</group>
    </sharedTo>
</ListView>