unpackaged/main/default/objects/Opportunity/listViews/Closed_Won_No_Work_Order.listView-meta.xml
<ListView>
    <fullName>Closed_Won_No_Work_Order</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sports_Opp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Work_Order_Assigned__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Closed/Won No Work Order</label>
    <sharedTo>
        <group>Sports_Turf_Sales</group>
        <role>FSL_User</role>
    </sharedTo>
</ListView>