unpackaged/main/default/objects/Opportunity/listViews/Copy_of_Sport_Turf_Opportunities.listView-meta.xml
<ListView>
    <fullName>Copy_of_Sport_Turf_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sports_Opp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Sport Turf Opportunities - Need Split</label>
    <sharedTo>
        <group>Sports_Turf_Managers</group>
        <group>Sports_Turf_Sales</group>
        <role>FSL_User</role>
    </sharedTo>
</ListView>