unpackaged/main/default/objects/Opportunity/listViews/Expired_Opps.listView-meta.xml
<ListView>
    <fullName>Expired_Opps</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sports_Opp__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Approval_Date__c</field>
        <operation>greaterThan</operation>
        <value>N_WEEKS_AGO:12</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Quote_Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Expired Opps</label>
</ListView>