unpackaged/main/default/objects/Opportunity/listViews/James_Beever_Open_Opps.listView-meta.xml
<ListView>
    <fullName>James_Beever_Open_Opps</fullName>
    <columns>Sales_Rep__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>contains</operation>
        <value>Young</value>
    </filters>
    <label>James Beever Open Opps</label>
    <sharedTo>
        <role>Sports_Turf_Ops_Manager</role>
    </sharedTo>
</ListView>